iptables
# Generated by iptables-save v1.4.21 on Fri Mar 29 16:29:05 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [170:14705]
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -j ACCEPT
-A INPUT -s 35.194.220.214/32 -j ACCEPT
-A INPUT -s 220.130.140.50/32 -j ACCEPT
-A INPUT -s 218.210.99.16/32 -j ACCEPT
-A INPUT -s 220.130.140.51/32 -j ACCEPT
-A INPUT -s 61.216.144.183/32 -j ACCEPT
-A INPUT -s 61.216.144.186/32 -j ACCEPT
-A INPUT -s 112.199.32.122/32 -j ACCEPT
-A INPUT -s 203.177.171.98/32 -j ACCEPT
-A INPUT -s 203.177.179.69/32 -j ACCEPT
-A INPUT -s 58.218.198.140/32 -j ACCEPT
-A INPUT -s 121.201.126.154/32 -j ACCEPT
-A INPUT -s 121.31.40.102/32 -j ACCEPT
-A INPUT -s 121.18.238.84/32 -j ACCEPT
-A INPUT -s 218.85.133.196/32 -j ACCEPT
-A INPUT -s 122.228.244.207/32 -j ACCEPT
-A INPUT -s 123.249.34.189/32 -j ACCEPT
-A INPUT -s 222.88.94.206/32 -j ACCEPT
-A INPUT -s 117.21.191.101/32 -j ACCEPT
-A INPUT -s 119.90.126.103/32 -j ACCEPT
-A INPUT -s 118.123.243.214/32 -j ACCEPT
-A INPUT -s 27.221.52.39/32 -j ACCEPT
-A INPUT -s 221.181.73.38/32 -j ACCEPT
-A INPUT -s 60.169.77.177/32 -j ACCEPT
-A INPUT -s 42.7.27.156/32 -j ACCEPT
-A INPUT -s 202.111.175.61/32 -j ACCEPT
-A INPUT -s 219.153.49.198/32 -j ACCEPT
-A INPUT -s 219.138.135.102/32 -j ACCEPT
-A INPUT -s 125.211.218.83/32 -j ACCEPT
-A INPUT -s 60.28.24.175/32 -j ACCEPT
-A INPUT -s 117.34.109.53/32 -j ACCEPT
-A INPUT -s 221.204.213.252/32 -j ACCEPT
-A INPUT -s 124.232.137.43/32 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j DROP
-A FORWARD -s 10.8.0.0/24 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri Mar 29 16:29:05 2019
# Generated by iptables-save v1.4.21 on Fri Mar 29 16:29:05 2019
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [19:1149]
:POSTROUTING ACCEPT [19:1149]
-A POSTROUTING -s 10.8.0.0/24 ! -d 10.8.0.0/24 -j SNAT --to-source 221.204.213.252
COMMIT
# Completed on Fri Mar 29 16:29:05 2019
